<resources>
    <string name="app_name">LifeCall</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_emergency_contacts">Emergency Contacts</string>
    <string name="nav_track_patient">Track Patient</string>
    <string name="nav_personal_details">Personal Details</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Emergency Contacts</item>
        <item>Track Patient</item>
        <item>Personal Details</item>
        <item>Settings</item>
    </string-array>

    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_weight">Enter Weight e.g 80</string>
    <string name="enter_blood_group">Enter Blood Group</string>
    <string name="enter_diseases">Enter Diseases, E.g: diabetes,sugar</string>
    <string name="confirm">Confirm</string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text">Item Text</string>
    <string name="google">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="do_you_have_any_disease">Do You Have Any Disease? (E.g: diabetes,sugar)</string>
    <string name="call_for_help">Call For Help</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="track_patient">Track Patient</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="help">Help</string>
    <string name="welcome_back">Welcome back, </string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string-array name="blood_groups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
