<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:icon="@drawable/friends_icon"
            android:id="@+id/nav_friends"
            android:title="@string/emergency_contacts" />
        <item
            android:icon="@drawable/map_icon"
            android:id="@+id/nav_track_patient"
            android:title="@string/track_patient" />

        <item
            android:icon="@drawable/edit_icon"
            android:id="@+id/nav_personal_details"
            android:title="@string/nav_personal_details" />


    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>
