<ScrollView
    android:background="#2a2941"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:textColor="#ffffff"
        android:theme="@style/EditTextTheme"
        android:textColorHint="#ffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_age"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:textColor="#ffff"
        android:text="@string/select_blood_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:id="@+id/textView7" />

    <TextView
        android:textColor="#ffff"
        android:text="@string/do_you_have_any_disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="22dp"
        android:id="@+id/textView3" />

    <EditText
        android:textColor="#ffffff"
        android:textColorHint="#ffff"
        android:theme="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:ems="10"
        android:id="@+id/editText1"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:textColor="#ffffff"
        android:textColorHint="#ffff"
        android:theme="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_weight"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:textColor="#ffffff"
        android:textColorHint="#ffff"
        android:theme="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_diseases"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/radio_group1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/confirm"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/button4"
        android:onClick="onConfirm"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_below="@+id/editText4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp" />

    <Spinner
        android:background="@color/colorPrimary"
        android:theme="@style/EditTextTheme"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/spinner1"
        android:entries="@array/blood_groups"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <RadioGroup
        android:theme="@style/EditTextTheme"
        android:id="@+id/radio_group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3">
        <RadioButton
            android:textColor="#ffff"
            android:text="Yes"
            android:textColorHighlight="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1" />

        <RadioButton
            android:textColor="#ffff"
            android:text="No"
            android:textColorHighlight="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:id="@+id/radioButton2" />
    </RadioGroup>

    <ProgressBar
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/activity_user_table_progress"
       />
</RelativeLayout>

    </ScrollView>